# quakesaver-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  deploy-package-test.yml  deploy-package.yml  lint.yml  test.yml
docs/source/: conf.py  index.rst
docs/source/modules/: modules.rst  quakesaver_client.models.rst  quakesaver_client.rst
docs/source/pages/: getting_started.md  installation.md
pydantic_schemas/: data_products.schema.json  sensor_state.schema.json
quakesaver_client/: __init__.py  cli.py  client_websocket.py  errors.py  fdsnws.py  local_client.py  sensor_actor.py  types.py  util.py  zmq_client.py  zmq_server.py
quakesaver_client/models/: __init__.py  cloud_sensor.py  data_product_query.py  data_products.py  local_sensor.py  measurement.py  permission.py  sensor.py  sensor_state.py  token.py  warnings.py  websocket.py  zmq_payload.py
test/: test-client.py
tests/: conftest.py  test-client.py  test-cloud-client.py  test-local-client.py  test_cloud_client.py  test_local_client.py
