[project]
name = "quakesaver-client"
version = "0.0.0"
description = "Client library for interacting with the seismiq sensor fleet."
authors = [{ name = "seismiq", email = "info@quakesaver.net" }]
requires-python = ">=3.9, <3.12"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "pydantic~=1.10.5",
    "requests~=2.28.2",
    "aiohttp>=3.8.4,<4",
]

[project.urls]
Homepage = "https://quakesaver.net/"
Repository = "https://github.com/QuakeSaver/quakesaver-client"
Documentation = "https://quakesaver.github.io/quakesaver-client/"

[project.scripts]
qs-client = "quakesaver_client.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "pytest-asyncio>=0.20.3,<0.21",
    "pytest-cov>=4.0.0,<5",
    "Sphinx>=6.1.0,<7",
    "pre-commit>=3.1.0,<4",
    "obspy>=1.4.0,<2",
    "myst-parser>=0.19.1,<0.20",
    "toml>=0.10.2,<0.11",
    "sphinx-autodoc-typehints~=1.22",
    "furo>=2022.12.7,<2023",
    "datamodel-code-generator>=0.17.1,<0.18",
]

[tool.hatch.build.targets.sdist]
include = ["quakesaver_client"]

[tool.hatch.build.targets.wheel]
include = ["quakesaver_client"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "WARNING"
asyncio_mode = "auto"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.vulture]
make_whitelist = true
min_confidence = 70
paths = ["quakesaver_client"]
sort_by_size = true
verbose = false
ignore_names = ["cls"]

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "N", # naming
    "W", # pycodestyle warnings
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D203", # no-blank-line-before-class
    "D213", # multi-line-summary-second-line
    "N805", # First argument of a method should be named `self`
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".pytype",
    ".ruff_cache",
    "__pypackages__",
    "build",
    "dist",
    "tests/conftest.py",
]
line-length = 88
target-version = "py310"

[tool.ruff.per-file-ignores]
# due to autogeneration
"quakesaver_client/models/data_products.py" = [
    "D100",
    "D101",
    "D106",
    "F722",
    "F821",
]
"quakesaver_client/models/sensor_state.py" = [
    "D100",
    "D101",
    "D106",
    "F722",
    "F821",
]
"tests/**/*.py" = ["D103"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
